[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hubert-quantizer"
version = "0.0.1a"
description = "HuBERT"
readme = "README.md"
requires-python = ">=3.8"
authors =  [
    {name = "gitmylo", email = "gitmylo@gitmylo.com"},
]
# Apache 2.0
license = {file = "LICENSE"}

dependencies = [
]

[project.urls]
source = "https://github.com/gitmylo/bark-voice-cloning-HuBERT-quantizer"

[project.optional-dependencies]
dev = [
]

[tool.setuptools]
packages = ["hubert"]

[tool.setuptools.package-data]
#bark = ["assets/prompts/*.npz"]

#[tool.black]
#line-length = 100
